# Nebura Model API/src/server/interfaces/http/routes/api/admin/devs.routes.ts
@@ -1,0 +1,84 @@
+// Importa los tipos necesarios de Express
+// import { Request, Response } from 'express';
+
+import { isDevelopment } from "@/server/shared/middlewares/jwt/auth.middleware";
+import { authenticateToken } from "@/server/shared/middlewares/jwt/token.middleware";
+import { RateLimitManager } from "@/shared/rateLimit";
+import { TRoutesInput } from "@/typings/utils";
+
+import { SecurityController } from "../../../controllers/admin/devs.controllers";
+
+// Constantes para paths base y versionado
+const BASE_PATH = "/admin";
+const API_VERSION = "/api/v1";
+
+/**
+ * Formatea las rutas de autenticación con el prefijo correcto
+ * @param path Ruta específica del endpoint
+ * @returns Ruta completa formateada
+ */
+const formatRoute = (path: string): string => `${API_VERSION}${BASE_PATH}${path}`;
+
+export default ({ app }: TRoutesInput) => {
+  const security = new SecurityController();
+
+  /**
+   * Retrieves information about a specific IP address.
+   * Method: GET
+   * Route: /api/v1/security/ip-info/:ipAddress
+   * Middleware: authenticateToken
+   * Controller: security.getIpInfo
+   * Description: Returns detailed information about an IP address.
+   */
+  app.get(
+    formatRoute("/ip-info/:ipAddress"),
+    RateLimitManager.getInstance().createCustomLimiter({
+      max: 10,
+      windowMs: 60 * 1000, // 1 minuto
+      message: "Too many requests, please try again later.",
+    }),
+    authenticateToken,
+    isDevelopment,
+    security.getIpInfo,
+  );
+
+  /**
+   * Retrieves cache performance metrics.
+   * Method: GET
+   * Route: /api/v1/admin/cache-performance
+   * Middleware: authenticateToken, isDevelopment
+   * Controller: security.cacheInfo
+   * Description: Returns performance metrics related to the cache.
+   */
+  app.get(
+    formatRoute("/cache-performance"),
+    RateLimitManager.getInstance().createCustomLimiter({
+      max: 10,
+      windowMs: 60 * 1000, // 1 minuto
+      message: "Too many requests, please try again later.",
+    }),
+    authenticateToken,
+    isDevelopment,
+    security.cacheInfo,
+  );
+
+  /**
+   * Retrieves the current cache index.
+   * Method: GET
+   * Route: /api/v1/admin/cache-index
+   * Middleware: authenticateToken, isDevelopment
+   * Controller: security.cacheIndex
+   * Description: Returns the current cache index.
+   */
+  app.get(
+    formatRoute("/cache-index"),
+    RateLimitManager.getInstance().createCustomLimiter({
+      max: 10,
+      windowMs: 60 * 1000, // 1 minuto
+      message: "Too many requests, please try again later.",
+    }),
+    authenticateToken,
+    isDevelopment,
+    security.cacheIndex,
+  );
+};
